--- a/index.html
+++ b/index.html
@@ -12,23 +12,37 @@
 			var Todo = Backbone.Model.extend({
 				initialize: function() {
 					console.log('Model initialized');
+				},
+				//Default todo attribute
+				defaults: {
+					title: '',
+					completed: false
 				}
 			});
 
-			// We can then create our own concrete instance of a (Todo) model
-			// with no values at all:
+			// Now we can create our concrete instance of the model
+			// with default values as follows:
 			var todo1 = new Todo();
-			//Following logs {}
+
+			//Following logs {"title":"","completed":false}
 			console.log(JSON.stringify(todo1));
 
-			//or with some arbitrary data:
+			// Or we could instantiate it with some of the attributes (e.g., with custom title):
 			var todo2 = new Todo({
-				title: 'Check the atributes of both meodels in the console.',
+				title: 'Check the atributes of both meodels in the console.'
+			});
+
+			//Following logs: {"title":"Check the atributes of both meodels in the console.","completed":false}
+			console.log(JSON.stringify(todo2));
+
+			//Or override all of the default attributes:
+			var todo3 = new Todo({
+				title: 'This todo is done, so take no action on this one',
 				completed: true
 			});
 
-			//Following logs: {"title":"Check the atributes of both meodels in the console.", "completed":true}
-			console.log(JSON.stringify(todo2));
+			//Following logs: {"title":"This todo is done, so take no ation on this one.","completed":true}
+			console.log(JSON.stringify(todo3));
 		</script>
 	</body>
 </html>
