How to get properties from a Backbone Model.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			// with default values as follows:
 			var todo1 = new Todo();
 
-			//Following logs {"title":"","completed":false}
-			console.log(JSON.stringify(todo1));
+			console.log(todo1.get('title')); //Empty string
+			console.log(todo1.get('completed')); //false
 
 			// Or we could instantiate it with some of the attributes (e.g., with custom title):
 			var todo2 = new Todo({
@@ -41,7 +41,7 @@
 				completed: true
 			});
 
-			//Following logs: {"title":"This todo is done, so take no ation on this one.","completed":true}
+			//Following logs: {"title":"This todo is done, so take no action on this one.","completed":true}
 			console.log(JSON.stringify(todo3));
 		</script>
 	</body>
